# nex_bridge

./: .gitignore  README.md  pyproject.toml
nex_bridge/: hooks.py  modules.txt
nex_bridge/api/: stock_take.py
nex_bridge/config/: desktop.py  docs.py
nex_bridge/stock_take/doctype/stock_take_entry/: stock_take_entry.js  stock_take_entry.json  stock_take_entry.py  test_stock_take_entry.py
nex_bridge/stock_take/doctype/stock_take_entry_item/: stock_take_entry_item.json  stock_take_entry_item.py
nex_bridge/stock_take/doctype/stock_taker/: stock_taker.js  stock_taker.json  stock_taker.py  test_stock_taker.py
nex_bridge/stock_take/doctype/stock_taker_item/: stock_taker_item.json  stock_taker_item.py
