[project]
name = "nex_bridge"
authors = [
    { name = "Sydney Kibanga", email = "sydneykb38@gmail.com"}
]
description = "Nexbridge is a Frappe app that serves as a bridge between mobile apps (Flutter) and Frappe/ERPNext. It simplifies the integration and management of multiple applications, enabling seamless connection, data synchronization, and control across platforms."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
